# CellMetPro

./: .gitignore  CONTRIBUTING.md  README.md  conda_config.yaml  dev_script.py  pyproject.toml
cellmetpro/: __init__.py  cli.py
cellmetpro/analysis/: __init__.py  clustering.py  differential.py  pathway.py
cellmetpro/core/: compass.py  fba.py
cellmetpro/visualization/: __init__.py  dashboard.py  dotplot.py  umap.py  volcano.py
data/alzheimer_cd8/: cluster_annotation.csv  exported Annotations.tsv
data/alzheimer_cd8/tpm_counts_normalized/: cell_metadata.csv  run_compass.sh
data/eae/cd4/: cd4_batched_annotations.tsv  cluster_annotations.csv
data/eae/neutrophils/: Neutrophils_EAE_batched_annotations.tsv  cluster_annotations.csv
src/: cli.py
src/core/: __init__.py  preprocessing.py
src/models/: __init__.py
src/visualization/: heatmap.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_differential.py
