[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellmetpro"
version = "0.1.0"
description = "Cellular Metabolic Profiler - Analyze and visualize metabolic profiles from scRNA-seq data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Oumar Ndiaye", email = "oumar@example.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["bioinformatics", "single-cell", "metabolism", "FBA", "scRNA-seq"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scanpy>=1.9",
    "anndata>=0.9",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.14",
    "scikit-learn>=1.2",
    "statsmodels>=0.14",
    "umap-learn>=0.5",
    "cobra>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
dashboard = [
    "streamlit>=1.28",
]
all = [
    "cellmetpro[dev,dashboard]",
]

[project.scripts]
cellmetpro = "cellmetpro.cli:main"

[project.urls]
Homepage = "https://github.com/oumarndiaye/Cellular_Metabolic_Profiler"
Documentation = "https://github.com/oumarndiaye/Cellular_Metabolic_Profiler#readme"
Repository = "https://github.com/oumarndiaye/Cellular_Metabolic_Profiler"
Issues = "https://github.com/oumarndiaye/Cellular_Metabolic_Profiler/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cellmetpro*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
